--- a/my-react-app/client/package.json
+++ b/my-react-app/client/package.json
@@ -7,7 +7,8 @@
     "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.10",
+    "@mui/icons-material": "^5.14.11",
+    "@mui/material": "^5.14.11",
     "@nextui-org/button": "^2.0.21",
     "@nextui-org/react": "^2.1.13",
     "@nextui-org/system": "^2.0.10",
