--- a/my-react-app/client/package.json
+++ b/my-react-app/client/package.json
@@ -20,9 +20,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-id-swiper": "^4.0.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-scripts": "5.0.1",
     "semantic-ui-css": "^2.5.0",
-    "semantic-ui-react": "^2.1.4"
+    "semantic-ui-react": "^2.1.4",
+    "swiper": "^10.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
