--- a/my-react-app/client/package.json
+++ b/my-react-app/client/package.json
@@ -7,6 +7,7 @@
     "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-free": "^6.4.2",
     "@mui/icons-material": "^5.14.11",
     "@mui/material": "^5.14.11",
     "@nextui-org/button": "^2.0.21",
@@ -16,10 +17,12 @@
     "axios": "^1.5.0",
     "cra-template": "1.2.0",
     "framer-motion": "^10.16.4",
+    "mdb-react-ui-kit": "^6.3.0",
     "next-ui": "^0.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4"
