--- a/my-react-app/client/package.json
+++ b/my-react-app/client/package.json
@@ -22,12 +22,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
-
     "react-id-swiper": "^4.0.0",
     "react-native-snap-carousel": "^3.9.1",
-
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.16.0",
-
     "react-scripts": "5.0.1",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
