--- a/my-react-app/client/package.json
+++ b/my-react-app/client/package.json
@@ -18,6 +18,7 @@
     "cra-template": "1.2.0",
     "framer-motion": "^10.16.4",
     "mdb-react-ui-kit": "^6.3.0",
+    "mdb-ui-kit": "^6.4.2",
     "next-ui": "^0.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
