Added animation to landing page Mads

--- a/my-react-app/client/package.json
+++ b/my-react-app/client/package.json
@@ -20,11 +20,10 @@
     "mdb-react-ui-kit": "^6.3.0",
     "mdb-ui-kit": "^6.4.2",
     "next-ui": "^0.9.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-id-swiper": "^4.0.0",
     "react-native-snap-carousel": "^3.9.1",
+    "react-particles": "^2.12.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
