--- a/my-react-app/client/package.json
+++ b/my-react-app/client/package.json
@@ -14,12 +14,14 @@
     "@nextui-org/react": "^2.1.13",
     "@nextui-org/system": "^2.0.10",
     "@nextui-org/theme": "^2.1.9",
-    "axios": "^1.5.0",
+    "axios": "^1.5.1",
     "cra-template": "1.2.0",
     "framer-motion": "^10.16.4",
+    "js-cookie": "^3.0.5",
     "mdb-react-ui-kit": "^6.3.0",
     "mdb-ui-kit": "^6.4.2",
     "next-ui": "^0.9.0",
+    "nodemon": "^3.0.1",
     "react-icons": "^4.11.0",
     "react-id-swiper": "^4.0.0",
     "react-native-snap-carousel": "^3.9.1",
