--- a/my-react-app/client/package.json
+++ b/my-react-app/client/package.json
@@ -9,6 +9,7 @@
     "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@mui/icons-material": "^5.14.11",
+    "@mui/joy": "^5.0.0-beta.10",
     "@mui/material": "^5.14.11",
     "@nextui-org/button": "^2.0.21",
     "@nextui-org/react": "^2.1.13",
