--- a/my-react-app/client/package.json
+++ b/my-react-app/client/package.json
@@ -8,8 +8,9 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-free": "^6.4.2",
-    "@mui/icons-material": "^5.14.11",
-    "@mui/material": "^5.14.11",
+    "@mui/icons-material": "^5.14.13",
+    "@mui/material": "^5.14.13",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.1",
     "@nextui-org/button": "^2.0.21",
     "@nextui-org/react": "^2.1.13",
     "@nextui-org/system": "^2.0.10",
@@ -30,6 +31,7 @@
     "react-scripts": "5.0.1",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
+    "styled-components": "^6.0.8",
     "swiper": "^10.3.1"
   },
   "scripts": {
