--- a/my-react-app/client/package.json
+++ b/my-react-app/client/package.json
@@ -29,7 +29,6 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.16.0",
-    "react-scripts": "5.0.1",
     "react-tsparticles": "^2.12.2",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
@@ -65,6 +64,7 @@
   "devDependencies": {
     "@craco/craco": "^7.1.0",
     "css-loader": "^6.8.1",
+    "react-scripts": "^5.0.1",
     "sass": "^1.68.0",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
