--- a/my-react-app/client/package.json
+++ b/my-react-app/client/package.json
@@ -3,36 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@chakra-ui/icons": "^2.1.1",
-    "@chakra-ui/react": "^2.8.1",
+  
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@mui/icons-material": "^5.14.14",
     "@mui/material": "^5.14.13",
     "@mui/styled-engine-sc": "^6.0.0-alpha.1",
-    "@nextui-org/button": "^2.0.21",
-    "@nextui-org/react": "^2.1.13",
-    "@nextui-org/system": "^2.0.10",
-    "@nextui-org/theme": "^2.1.9",
+  
     "axios": "^1.5.1",
     "cra-template": "1.2.0",
     "framer-motion": "^10.16.4",
     "js-cookie": "^3.0.5",
     "mdb-react-ui-kit": "^6.3.0",
     "mdb-ui-kit": "^6.4.2",
-    "next-ui": "^0.9.0",
-    "nodemon": "^3.0.1",
+    
+    
     "react": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-id-swiper": "^4.0.0",
-    "react-native-snap-carousel": "^3.9.1",
-    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.16.0",
     "react-tsparticles": "^2.12.2",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
-    "styled-components": "^6.0.8",
     "swiper": "^10.3.1",
     "tsparticles-engine": "^2.12.0",
     "tsparticles-slim": "^2.12.0"
@@ -62,12 +55,9 @@
     ]
   },
   "devDependencies": {
-    "@craco/craco": "^7.1.0",
-    "css-loader": "^6.8.1",
-    "react-scripts": "^5.0.1",
-    "sass": "^1.68.0",
-    "sass-loader": "^13.3.2",
-    "style-loader": "^3.3.3",
-    "tailwindcss": "^3.3.3"
+    
+    
+    "react-scripts": "^5.0.1"
+   
   }
 }
